test/tests/fail/mainargs.alan
main (i : int) : proc
{
	writeString("Hello World!\n");
}
